# registry-mcp

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: docs.yaml  release.yaml
docs/: SUMMARY.md  cursor-setup.md  gen_ref_pages.py  index.md  installation.md  quick-reference.md  usage.md
src/registry_mcp/: __init__.py  main.py  mcp.py
src/registry_mcp/tools/: __init__.py  _greet.py  registry_guidance.py  registry_submission.py
tests/: test_app.py  test_mcp_tools.py  test_registry_guidance.py  test_registry_submission.py
